--- a/.github/workflows/main_nocache.yml
+++ b/.github/workflows/main_nocache.yml
@@ -19,8 +19,8 @@ permissions:
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "*/10 * * * *"
+  # schedule:
+    # - cron: "*/10 * * * *"
 
 env:
   PROTOC_VERSION: 3.17.3
